feat: gen proto
