# docs/swagger.yaml
@@ -1,5 +1,59 @@
 basePath: /api/bic-gin
 definitions:
+  api.HttpMethod:
+    properties:
+      method:
+        description: required
+        type: string
+      note:
+        type: string
+      url:
+        description: required
+        type: string
+    type: object
+  api.MenuItem:
+    properties:
+      children:
+        items:
+          $ref: '#/definitions/api.MenuItem'
+        type: array
+      id:
+        description: required
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/api.MenuPageAction'
+        type: array
+      label:
+        description: required
+        type: string
+      menu_item_type:
+        description: required
+        type: integer
+    type: object
+  api.MenuPageAction:
+    properties:
+      id:
+        description: required
+        type: string
+      label:
+        type: string
+      methods:
+        description: 对应http接口
+        items:
+          $ref: '#/definitions/api.HttpMethod'
+        type: array
+    type: object
+  api.PageItem:
+    properties:
+      checked:
+        type: boolean
+      id:
+        description: required
+        type: string
+      label:
+        type: string
+    type: object
   api.ResponseAuth:
     properties:
       expires:
@@ -26,6 +80,13 @@ definitions:
     - token
     - token_refresh
     type: object
+  api.ResponseGetMenus:
+    properties:
+      route_list:
+        items:
+          $ref: '#/definitions/api.MenuItem'
+        type: array
+    type: object
   api.ResponseGetRole:
     properties:
       create_time:
@@ -49,6 +110,10 @@ definitions:
       remark:
         description: 备注
         type: string
+      route_list:
+        items:
+          $ref: '#/definitions/api.RouteNode'
+        type: array
       update_time:
         description: 更新时间
         type: integer
@@ -151,6 +216,22 @@ definitions:
       title:
         type: string
     type: object
+  api.RouteNode:
+    properties:
+      children:
+        items:
+          $ref: '#/definitions/api.RouteNode'
+        type: array
+      id:
+        description: required
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/api.PageItem'
+        type: array
+      label:
+        type: string
+    type: object
   api.User:
     properties:
       ban:
@@ -213,6 +294,66 @@ paths:
       summary: 获取用户列表
       tags:
       - Auth-Service
+  /v1/menu/page/action/:
+    post:
+      parameters:
+      - description: 参数无注释
+        in: body
+        name: id
+        required: true
+        schema:
+          type: string
+      - description: 参数无注释
+        in: body
+        name: label
+        required: true
+        schema:
+          type: string
+      - description: 对应http接口
+        in: body
+        name: methods
+        schema:
+          items:
+            $ref: '#/definitions/api.HttpMethod'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "401":
+          description: header need Authorization data
+          schema:
+            type: string
+        "403":
+          description: no api permission or no obj permission
+          schema:
+            type: string
+      summary: 添加菜单页面行为
+      tags:
+      - Admin-Service
+  /v1/menus/:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.ResponseGetMenus'
+        "401":
+          description: header need Authorization data
+          schema:
+            type: string
+        "403":
+          description: no api permission or no obj permission
+          schema:
+            type: string
+      summary: 获取菜单列表
+      tags:
+      - Admin-Service
   /v1/role/:id/:
     get:
       parameters:
